@@ -1,3 +1,7 @@
+2008-10-04  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up for issue #9472: htmlArea RTE: Safari may crash when the RTE closes
+
 2008-10-02  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9444: htmlArea RTE: Incorrect assigment of class to one line <ol> in Firefox
